// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea.ts should render component and match snapshot 1`] = `
<div class="text-area"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-area__control text-area__control--not-prepend text-area__control--not-append">
    <!---->
    <div class="text-area__control__input"><textarea id="text-area-1" class="text-area__input resize-none" placeholder="Default"></textarea></div>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with custom classes and match snapshot 1`] = `
<div class="text-area"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Solo custom</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-area__control text-area__control--not-prepend text-area__control--not-append dark:bg-transparent">
    <!---->
    <div class="text-area__control__input"><textarea id="text-area-1" class="text-area__input resize-none dark:placeholder-blue-500" placeholder="Solo custom"></textarea></div>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with disabled prop and match snapshot 1`] = `
<div class="text-area text-area--disabled"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-area__control text-area__control--not-prepend text-area__control--not-append">
    <!---->
    <div class="text-area__control__input"><textarea id="text-area-1" class="text-area__input resize-none" placeholder="Default" disabled=""></textarea></div>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with loading prop and match snapshot 1`] = `
<div class="text-area"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-area__control text-area__control--not-prepend text-area__control--not-append">
    <!---->
    <div class="text-area__control__input"><textarea id="text-area-1" class="text-area__input resize-none" placeholder="Default"></textarea></div>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with name, required, readonly props and match snapshot 1`] = `
<div class="text-area text-area--readonly"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-area__control text-area__control--not-prepend text-area__control--not-append">
    <!---->
    <div class="text-area__control__input"><textarea id="text-area-1" class="text-area__input resize-none" name="text-field-name" required="" placeholder="Default" readonly=""></textarea></div>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with singleLine prop and match snapshot 1`] = `
<div class="text-area text-area--single-line">
  <!---->
  <!---->
  <div class="text-area__control text-area__control--not-prepend text-area__control--not-append">
    <!---->
    <div class="text-area__control__input"><textarea id="text-area-1" class="text-area__input resize-none" placeholder="Default"></textarea></div>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render component with slots and match snapshot 1`] = `
<div class="text-area">
  <!---->
  <!---->
  <div class="text-area__control">
    <div class="flex items-center flex-shrink-0"><i class="icon w-6 text-gray-200 dark:text-gray-300 mr-2" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
          <g fill="currentColor">
            <path d="prepend-icon"></path>
          </g>
        </svg></i>Prepend slot</div>
    <div class="text-area__control__input"><textarea id="text-area-1" class="text-area__input resize-none"></textarea></div>
    <div class="flex items-center flex-shrink-0">Append slot<i class="icon w-6 text-gray-200 dark:text-gray-300" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="24px" width="24px" role="img" aria-hidden="true" style="font-size: 24px; height: 24px; width: 24px;">
          <g fill="currentColor">
            <path d="append-icon"></path>
          </g>
        </svg></i></div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`TextArea.ts should render focused component and match snapshot 1`] = `
<div class="text-area text-area--focused"><label id="label-1" for="text-area-1" aria-hidden="false" class="label">
    <div class="label__wrapper">
      <div class="label__content__wrapper">
        <div class="label__content">Default</div>
      </div>
      <!---->
    </div>
  </label>
  <!---->
  <div class="text-area__control text-area__control--not-prepend text-area__control--not-append">
    <!---->
    <div class="text-area__control__input"><textarea id="text-area-1" class="text-area__input resize-none" placeholder="Default"></textarea></div>
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;
